@@ -24,6 +24,8 @@ Bugs fixed
   argument lists, and more comprehensive error messages in some cases.
 * C, C++, fix crash and wrong duplicate warnings related to anon symbols.
 * #6477: Escape first "!" in a cross reference linking no longer possible
+* #7219: py domain: The index entry generated by ``py:function`` directive is
+  different with one from ``index`` directive with "builtin" type
 
 Testing
 --------
